fix clearfix spacing

--- a/sites/all/themes/teiazen/css/views-styles.css
+++ b/sites/all/themes/teiazen/css/views-styles.css
@@ -103,9 +103,8 @@
 
   /* line 95, ../sass/views-styles.scss */
   #content .panel-pane:after {
-    content: ".";
+    content: "";
     display: block;
-    height: 2em;
     visibility: hidden;
     clear: both;
   }
@@ -113,19 +112,19 @@
   /**
    * Taxonomy term
    */
-  /* line 108, ../sass/views-styles.scss */
+  /* line 107, ../sass/views-styles.scss */
   .view-taxonomy-term {
     padding-left: 0;
     padding-right: 0;
   }
-  /* line 110, ../sass/views-styles.scss */
+  /* line 109, ../sass/views-styles.scss */
   .view-taxonomy-term h3.field-title-field {
     margin-top: 0;
     margin-bottom: 0;
     color: #4f915e;
   }
 
-  /* line 118, ../sass/views-styles.scss */
+  /* line 117, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-pane figure {
     float: left;
     width: 33.33333%;
@@ -139,7 +138,7 @@
     box-sizing: border-box;
     word-wrap: break-word;
   }
-  /* line 126, ../sass/views-styles.scss */
+  /* line 125, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-pane h3, .view-taxonomy-term.view-display-id-pane p,
   .view-taxonomy-term.view-display-id-pane div.field,
   .view-taxonomy-term.view-display-id-pane div.event-nodeapi,
@@ -158,23 +157,23 @@
     word-wrap: break-word;
     clear: right;
   }
-  /* line 130, ../sass/views-styles.scss */
+  /* line 129, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-pane .views-row {
     margin-top: 1em;
   }
-  /* line 133, ../sass/views-styles.scss */
+  /* line 132, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-pane .views-row.views-row-first {
     margin-top: 0em;
   }
-  /* line 136, ../sass/views-styles.scss */
+  /* line 135, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-pane div.more-link:after {
-    content: ".";
+    content: "";
     display: block;
     visibility: hidden;
     clear: both;
   }
 
-  /* line 146, ../sass/views-styles.scss */
+  /* line 145, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-recent_pane-6 figure.field-title-image,
   .view-taxonomy-term.view-display-id-recent_pane figure.field-title-image {
     float: left;
@@ -189,7 +188,7 @@
     box-sizing: border-box;
     word-wrap: break-word;
   }
-  /* line 153, ../sass/views-styles.scss */
+  /* line 152, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-recent_pane-6 h3, .view-taxonomy-term.view-display-id-recent_pane-6 p,
   .view-taxonomy-term.view-display-id-recent_pane-6 div.field,
   .view-taxonomy-term.view-display-id-recent_pane-6 div.event-nodeapi,
@@ -215,7 +214,7 @@
     clear: right;
   }
 
-  /* line 159, ../sass/views-styles.scss */
+  /* line 158, ../sass/views-styles.scss */
   .view-taxonomy-term.view-display-id-no_title_image_pane {
     float: left;
     width: 100%;
@@ -230,7 +229,7 @@
     word-wrap: break-word;
   }
 
-  /* line 163, ../sass/views-styles.scss */
+  /* line 162, ../sass/views-styles.scss */
   .latest-attachment-full .view-display-id-latest_attachment > .view-content {
     float: left;
     width: 100%;
@@ -245,7 +244,7 @@
     word-wrap: break-word;
   }
 
-  /* line 166, ../sass/views-styles.scss */
+  /* line 165, ../sass/views-styles.scss */
   .latest-attachment-full > .view-content {
     clear: left;
     float: left;
@@ -261,7 +260,7 @@
     word-wrap: break-word;
   }
 
-  /* line 172, ../sass/views-styles.scss */
+  /* line 171, ../sass/views-styles.scss */
   .latest-attachment-2 .view-display-id-latest_attachment > .view-content {
     float: left;
     width: 66.66667%;
@@ -278,7 +277,7 @@
     padding-right: 0;
     clear: left;
   }
-  /* line 177, ../sass/views-styles.scss */
+  /* line 176, ../sass/views-styles.scss */
   .latest-attachment-2 .view-display-id-latest_attachment figure.field-title-image {
     float: left;
     width: 50%;
@@ -292,7 +291,7 @@
     box-sizing: border-box;
     word-wrap: break-word;
   }
-  /* line 184, ../sass/views-styles.scss */
+  /* line 183, ../sass/views-styles.scss */
   .latest-attachment-2 .view-display-id-latest_attachment h3, .latest-attachment-2 .view-display-id-latest_attachment p,
   .latest-attachment-2 .view-display-id-latest_attachment div.field,
   .latest-attachment-2 .view-display-id-latest_attachment div.event-nodeapi,
@@ -312,7 +311,7 @@
     clear: right;
   }
 
-  /* line 189, ../sass/views-styles.scss */
+  /* line 188, ../sass/views-styles.scss */
   .latest-attachment-2 > .view-content {
     clear: right;
     float: right;
@@ -334,25 +333,31 @@
   /*
    * Normalize Flexslider default theming.
    */
-  /* line 202, ../sass/views-styles.scss */
+  /* line 201, ../sass/views-styles.scss */
   .flexslider {
     border: none;
     border-radius: 0;
     box-shadow: none;
+    margin-bottom: 35px;
+  }
+
+  /* line 207, ../sass/views-styles.scss */
+  .flex-control-nav {
+    bottom: -30px;
   }
 
   /*
    * Top slider
    */
-  /* line 212, ../sass/views-styles.scss */
+  /* line 215, ../sass/views-styles.scss */
   div.view-teia-slideshow .view-content .flexslider {
     background: whitesmoke;
   }
-  /* line 216, ../sass/views-styles.scss */
+  /* line 219, ../sass/views-styles.scss */
   div.view-teia-slideshow li {
     overflow: hidden;
   }
-  /* line 220, ../sass/views-styles.scss */
+  /* line 223, ../sass/views-styles.scss */
   div.view-teia-slideshow figure {
     width: 66.66667%;
     padding-left: 10px;
@@ -368,7 +373,7 @@
     float: left;
     clear: left;
   }
-  /* line 227, ../sass/views-styles.scss */
+  /* line 230, ../sass/views-styles.scss */
   div.view-teia-slideshow div.slideshow-text,
   div.view-teia-slideshow div.more-link {
     width: 33.33333%;
@@ -385,27 +390,27 @@
     position: absolute;
     padding-right: 30px;
   }
-  /* line 232, ../sass/views-styles.scss */
+  /* line 235, ../sass/views-styles.scss */
   div.view-teia-slideshow div.slideshow-text {
     top: 0;
     right: 0;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    padding-top: 1em;
+    padding-bottom: 1em;
   }
-  /* line 238, ../sass/views-styles.scss */
+  /* line 241, ../sass/views-styles.scss */
   div.view-teia-slideshow div.more-link {
     bottom: 0;
     right: 0;
     z-index: 1;
-    padding-bottom: 0.7em;
+    padding-bottom: 1em;
   }
-  /* line 244, ../sass/views-styles.scss */
+  /* line 247, ../sass/views-styles.scss */
   div.view-teia-slideshow div.more-link:before {
     position: absolute;
     left: 0;
     right: 30px;
     bottom: 0;
-    height: 3.8em;
+    height: 4.4em;
     content: "";
     display: block;
     background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(245, 245, 245, 0)), color-stop(33.33333%, #f5f5f5), color-stop(66.66667%, #f5f5f5), color-stop(100%, #f5f5f5));
@@ -415,15 +420,15 @@
     background-image: linear-gradient(rgba(245, 245, 245, 0), #f5f5f5, #f5f5f5, #f5f5f5);
     z-index: -1;
   }
-  /* line 256, ../sass/views-styles.scss */
+  /* line 259, ../sass/views-styles.scss */
   div.view-teia-slideshow h3 {
     font-size: x-large;
   }
-  /* line 257, ../sass/views-styles.scss */
+  /* line 260, ../sass/views-styles.scss */
   div.view-teia-slideshow div.publish-date {
     color: #adadad;
   }
-  /* line 258, ../sass/views-styles.scss */
+  /* line 261, ../sass/views-styles.scss */
   div.view-teia-slideshow h3, div.view-teia-slideshow div.publish-date, div.view-teia-slideshow p {
     margin-top: 0.3em;
     margin-bottom: 0.3em;
